analysis/analysis-api/testData/symbols/singleSymbolByPsi/errors/inlinePropertyWithBackingField.kt
// DO_NOT_CHECK_NON_PSI_SYMBOL_RESTORE_K1

class A {
    inline var some<caret>thing: Int = 0
}
